[contacts] Adjust the layout of a contact. Avoid showing the phone number twice by replacing the phone number with a description of the action provided by the link. Show the phone number right below the contact name not related to any action. Also, hide labels and icons for information that is not available and make the contact name bold for improved legibility.

--- a/apps/contacts/components/contact_info.css
+++ b/apps/contacts/components/contact_info.css
@@ -1,7 +1,6 @@
 :host {
   border-bottom: 2px solid var(--medium-color);
   padding: 1em;
-  font-size: larger;
 }
 
 :host(:not(.open)) .details {
@@ -20,4 +19,6 @@
 :host .header {
   cursor: pointer;
   text-transform: capitalize;
+  font-size: larger;
+  font-weight: bold;
 }
